erDiagram
  USERS {
    UUID id PK
    TEXT username
    TEXT email
    TEXT password_hash
    TIMESTAMP created_at
    TIMESTAMP updated_at
  }
  AGENTS {
    UUID id PK
    TEXT name
    TEXT type
    JSONB capabilities
    BOOLEAN is_active
    TIMESTAMP created_at
  }
  AGENT_TASKS {
    UUID id PK
    UUID agent_id FK
    UUID user_id FK
    TEXT status
    INT priority
    JSONB context
    JSONB result
    TIMESTAMP created_at
    TIMESTAMP completed_at
  }
  KNOWLEDGE_DOCUMENTS {
    UUID id PK
    TEXT title
    TEXT content_preview
    TEXT embedding_model
    TEXT collection_name
    JSONB metadata
    TIMESTAMP created_at
  }
  USERS ||--o{ AGENT_TASKS : requests
  AGENTS ||--o{ AGENT_TASKS : performs